# controller/customController.go
@@ -1,7 +1,6 @@
 package controller
 
 import (
-	"fmt"
 	"net/http"
 	"strconv"
 
@@ -66,44 +65,44 @@ func GetCustomAll(c *gin.Context) {
 
 }
 
-// RegisterCustom 고객등록
-// @Description 고객등록
-// @Router /customs [post]
-// @Tags Custom
-// @Accept  json
-// @Produce  json
-// @Param id body integer true "기본키 원랜입력안해야함"
-// @Param eid body string true "고객아이디 ex SAMSUNG"
-// @Param name body string true "고객명 ex 삼성"
-// @Param postno body string true "우편번호10자이내"
-// @Param basadr body string true "기본주소"
-// @Param dtladr body string true "상세주소"
-// @Param type body integer true "사업자여부 1 or 0"
-// @Param orgid body integer true "그라파나 회사 pk 입력안해야함원랜"
-// @Success 200 {object} models.Message
-func RegisterCustom(c *gin.Context) {
-	var custom models.Custom
-	if err := c.ShouldBindJSON(&custom); err != nil {
-		c.JSON(http.StatusBadRequest, gin.H{
-			"message": "failed",
-		})
-		return
+// // RegisterCustom 고객등록
+// // @Description 고객등록
+// // @Router /customs [post]
+// // @Tags Custom
+// // @Accept  json
+// // @Produce  json
+// // @Param id body integer true "기본키 원랜입력안해야함"
+// // @Param eid body string true "고객아이디 ex SAMSUNG"
+// // @Param name body string true "고객명 ex 삼성"
+// // @Param postno body string true "우편번호10자이내"
+// // @Param basadr body string true "기본주소"
+// // @Param dtladr body string true "상세주소"
+// // @Param type body integer true "사업자여부 1 or 0"
+// // @Param orgid body integer true "그라파나 회사 pk 입력안해야함원랜"
+// // @Success 200 {object} models.Message
+// func RegisterCustom(c *gin.Context) {
+// 	var custom models.Custom
+// 	if err := c.ShouldBindJSON(&custom); err != nil {
+// 		c.JSON(http.StatusBadRequest, gin.H{
+// 			"message": "failed",
+// 		})
+// 		return
 
-	}
+// 	}
 
-	// fmt.Println("-------bindingdata----")
-	// fmt.Println(custom)
+// 	// fmt.Println("-------bindingdata----")
+// 	// fmt.Println(custom)
 
-	affected, err := custom.Add()
-	if err != nil {
-		c.JSON(http.StatusBadRequest, gin.H{
-			"message": "failed",
-			"error":   err,
-		})
-		return
-	}
-	fmt.Println(affected)
-	c.JSON(http.StatusOK, gin.H{
-		"message": "success",
-	})
-}
+// 	affected, err := custom.Add()
+// 	if err != nil {
+// 		c.JSON(http.StatusBadRequest, gin.H{
+// 			"message": "failed",
+// 			"error":   err,
+// 		})
+// 		return
+// 	}
+// 	fmt.Println(affected)
+// 	c.JSON(http.StatusOK, gin.H{
+// 		"message": "success",
+// 	})
+// }
